--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 development:
   adapter: postgresql
-  database: db/development.sqlite3
+  database: db/development
   pool: 5
   timeout: 5000
 
@@ -14,7 +14,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: db/test.sqlite3
+  database: db/test
   pool: 5
   timeout: 5000
 
